# dbuddy

./: .cproject  .eleventy.js  .gitignore  .gitmodules  .project  CMakeLists.txt  CMakeListsPrivate.txt  CMakeListsUser.txt  Makefile  README.md  compress.js  hal.c  hal.h  lv_conf.h  lv_drv_conf.h  main.c  package.json  platformio.ini  postcss.config.js  ui.c  ui.h  webpack.config.js
assets/fonts/: roboto_black_10.c  roboto_black_12.c  roboto_black_120.c  roboto_black_14.c  roboto_black_16.c  roboto_black_18.c  roboto_black_24.c  roboto_black_48.c  roboto_black_72.c  roboto_black_96.c  roboto_light_10.c  roboto_light_12.c  roboto_light_120.c  roboto_light_14.c  roboto_light_16.c  roboto_light_18.c  roboto_light_24.c  roboto_light_48.c  roboto_light_72.c  roboto_light_96.c  roboto_regular_10.c  roboto_regular_12.c  roboto_regular_120.c  roboto_regular_14.c  roboto_regular_16.c  roboto_regular_18.c  roboto_regular_24.c  roboto_regular_48.c  roboto_regular_72.c  roboto_regular_96.c
data/: wifi.html
html/: calendars.html  index.html  stock.html  styles.css  timesync.html  wifi.html
html/_includes/: _navigation.liquid  layout.html
html/css/: calendars.css  fonts.css  icons.css  index.css
html/js/: index.js
html/scripts/: calendars.js  common.js  main.js  wifi.js
include/: config.h  dbuddy.h  esp32dev.h  fonts.h  hal.h  nodemcu32s.h  simulator.h  styles.h  ui-widgets.h  ui.h  widget-action-settings.h  widget-actions-container.h  widget-actionscontainer.h  widget-calendar-date.h  widget-calendar-details.h  widget-calendar.h  widget-menu.h  widget-page.h  widget-screen.h  widget-time-container.h  widget-time-label.h  widget-timecontainer.h  widget-timelabel.h  widget-wifi-signal.h  widget.h  widgets.h
include/endpoints/: abstract-request-handler.h  assets-request-handler.h  calendars-request-handler.h  index-request-handler.h  stock-request-handler.h  time-sync-request-handler.h  wifi-request-handler.h
include/widgets/: actionscontainer.h  menu.h  page.h  screen.h  timecontainer.h  timelabel.h
src/: config.cpp  configuration.h  dbuddy.cpp  esp32dev.cpp  fonts.c  fonts.cpp  fonts.h  hal.c  hal.cpp  hal.h  lv_conf.h  main.cpp  nodemcu32s.cpp  simulator.cpp  strutil.c  strutil.h  styles.c  styles.cpp  styles.h  ui.c  ui.cpp  ui.h  widget-action-settings.cpp  widget-actions-container.cpp  widget-actionscontainer.cpp  widget-calendar-date.cpp  widget-calendar-details.cpp  widget-calendar.cpp  widget-menu.cpp  widget-page.cpp  widget-screen.cpp  widget-time-container.cpp  widget-time-label.cpp  widget-timecontainer.cpp  widget-timelabel.cpp  widget-wifi-signal.cpp  widget.cpp
src/endpoints/: abstract-request-handler.cpp  assets-request-handler.cpp  calendars-request-handler.cpp  index-request-handler.cpp  stock-request-handler.cpp  stock-request-handler.h  time-sync-request-handler.cpp  time-sync-request-handler.h  wifi-request-handler.cpp
src/fonts/: roboto_black_16.c  roboto_black_24.c  roboto_black_72.c  roboto_regular_12.c  roboto_regular_14.c  roboto_regular_16.c  roboto_regular_18.c
src/ui/: settings.c  settings.h
src/widgets/: actionscontainer.cpp  menu.cpp  page.cpp  screen.cpp  timecontainer.cpp  timelabel.cpp
